--- a/StudentoMainProject/Scripts/src/SubjectDetailTeacher/SubjectDetail.css
+++ b/StudentoMainProject/Scripts/src/SubjectDetailTeacher/SubjectDetail.css
@@ -62,14 +62,14 @@
 }
 
 .grades-material-container{
-    display: flex;
-    flex-wrap: wrap;     
+    display: flex;         
     justify-content: space-between;
+    gap: 20px;
 }
 
 .student-grades-container-teacher{     
-    width: 100%;
-    max-width: 650px;      
+    flex-grow: 1;
+    flex-basis: 500px;      
 }
 
 .student-material-container{
@@ -273,5 +273,11 @@
         max-width: 1300px;
     }
       
+}
+
+@media(max-width: 1120px){       
+    .grades-material-container{
+        flex-wrap: wrap;
+    }   
 }
 
